--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-56332-73"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YJCYWQFHGB"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-56332-73');
+      gtag('config', 'G-YJCYWQFHGB');
     </script>
 
     <meta charset="utf-8">
